# scriptPad

./: .gitignore  .gitmodules  README.md
.github/workflows/: cmake.yml
scriptPad_PCB/: fp-info-cache  scriptPad_PCB.csv  scriptPad_PCB.kicad_pcb  scriptPad_PCB.kicad_prl  scriptPad_PCB.kicad_pro  scriptPad_PCB.kicad_sch  scriptPad_PCB.xml  ~scriptPad_PCB.kicad_sch.lck
scriptPad_PCB/Fabrication/: scriptPad_PCB-bottom-pos.csv  scriptPad_PCB-top-pos.csv
scriptPad_PCB/Gerbers/: scriptPad_PCB-B_Cu.gbr  scriptPad_PCB-B_Mask.gbr  scriptPad_PCB-B_Paste.gbr  scriptPad_PCB-B_Silkscreen.gbr  scriptPad_PCB-Edge_Cuts.gbr  scriptPad_PCB-F_Cu.gbr  scriptPad_PCB-F_Fab.gbr  scriptPad_PCB-F_Mask.gbr  scriptPad_PCB-F_Paste.gbr  scriptPad_PCB-F_Silkscreen.gbr  scriptPad_PCB-NPTH-drl_map.gbr  scriptPad_PCB-NPTH.drl  scriptPad_PCB-PTH-drl_map.gbr  scriptPad_PCB-PTH.drl  scriptPad_PCB-job.gbrjob
scriptPad_PCB/extraComponents/easyeda2kicad.3dshapes/: FPC-SMD_18P-P0.50_FPC-05F-18PH20.wrl  KEY-TH_L15.6-W14.0-H15.3.wrl  LED-SMD_4P-L3.2-W2.8_SK6812MINI-EA.wrl  OSC-SMD_4P-L3.2-W2.5-H1.0.wrl  SOD-80_BD1.5-L3.5.wrl  SOT-753-5P_L2.9-W1.5-H1.1-LS2.8-P0.95.wrl  SW-SMD_4P-L3.7-W3.0-H2-P1.50-LS4.7.wrl  SW-SMD_EC11E0940501.wrl  SW-SMD_TS365CA.wrl  TF-SMD_XKTF-015-N.wrl
scriptPad_PCB/extraComponents/easyeda2kicad.pretty/: FPC-SMD_18P-P0.50_FPC-05F-18PH20.kicad_mod  KEY-TH_CPG1511F01S0X.kicad_mod  LED-SMD_4P-L3.2-W2.8_SK6812MINI-EA - copia.kicad_mod  LED-SMD_4P-L3.2-W2.8_SK6812MINI-EA.kicad_mod  LL-34_L3.4-W1.5-RD.kicad_mod  OSC-SMD_4P-L3.2-W2.5-BL.kicad_mod  SMD_KEYBOARD-SW.kicad_mod  SOT-753_L3.1-W1.7-P0.95-LS3.0-BL.kicad_mod  SW-SMD_4P-L3.7-W3.0-P1.50-LS4.7.kicad_mod  SW-SMD_EC11E0940501.kicad_mod  SW-SMD_TS365CA.kicad_mod  TF-SMD_XKTF-015-N.kicad_mod  USB-C_SMD-TYPE-C-31-M-12.kicad_mod
scriptPad_PCB/graphics/: backPanelGraphics.kicad_mod  frontGraphics.kicad_mod  frontPanelGraphics.kicad_mod  frontScriptPad.kicad_mod
scriptPad_firmware/: CMakeLists.txt  README.md  buildFrontEnd.sh  buildProject.sh  hwConfig.h  lwipopts.h  main.cpp  switchConfigExample.json  tusb_config.h  usb_descriptor.h  usb_descriptors.c
scriptPad_firmware/GUI/: GUI.cpp  GUI.h  lv_conf.h
scriptPad_firmware/GUI/drivers/ST7789V/: ST7789V.cpp  ST7789V.h
scriptPad_firmware/HIDManagement/: HIDManagement.cpp  HIDManagement.h
scriptPad_firmware/backLightManagement/: backLightManagement.cpp  backLightManagement.h
scriptPad_firmware/drivers/ST7789V/: ST7789V.cpp  ST7789V.h
scriptPad_firmware/filesManagement/: filesManagement.cpp  filesManagement.h  hw_config.c
scriptPad_firmware/inputsManagement/: encoderManagement.cpp  encoderManagement.h  switchManagement.cpp  switchManagement.h
scriptPad_firmware/modemUSBManagement/: frontEnd.c  modemUSBManagement.cpp  modemUSBManagement.h
scriptPad_firmware/modemUSBManagement/frontEnd/: index.html  script.js  style.css
